[package]
name = "beehave"
description = "A simple library for defining and evaluating a hierarchical state machine."
version = "0.0.2"
authors = ["Ryan Scott <atthealma@gmail.com>"]

readme = "README.md"
license = "MIT"
keywords = ["behaviour", "fsm", "ai", "state", "game"]

homepage = "https://github.com/Archytaus/beehave"
repository = "https://github.com/Archytaus/beehave"
documentation = "https://archytaus.github.io/beehave/beehave"

[[bin]]

name = "example"
path = "example/main.rs"
bench = true
test = false
doctest = false
doc = false

[lib]

name = "beehave"
path = "src/lib.rs"
doctest = false
bench = false

[[test]]
name = "tests"
